# python-saga-orchestrator

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  task.md
.github/workflows/: ci.yml  publish.yml
examples/: admin_skip.py  common.py  compensation_flow.py  http_and_queue.py  llm_deploy.py  retry_recovery.py
saga_orchestrator/: __init__.py
saga_orchestrator/admin/: __init__.py  api.py
saga_orchestrator/core/: builder.py  engine.py  orchestrator.py  repository.py
saga_orchestrator/domain/mixins/: __init__.py  saga_state.py  saga_step_histrory.py  types.py
saga_orchestrator/domain/models/: __init__.py  builder.py  context.py  notify.py  saga_snapshot.py  step.py
saga_orchestrator/domain/models/enums/: __init__.py  base_str_enum.py  (+3 more)
saga_orchestrator/inbox/: __init__.py  contracts.py  dispatcher.py  models.py  repository.py  retry.py
saga_orchestrator/outbox/: __init__.py  contracts.py  dispatcher.py  event.py  factory.py  models.py  repository.py  retry.py  serialization.py
src/admin/: api.py
src/core/: __init__.py  builder.py  orchestrator.py  repository.py
src/domain/exceptions/: __init__.py  saga.py
src/domain/mixins/: saga_state.py
src/domain/models/: __init__.py  retry.py  saga_snapshot.py  step.py
tests/integration/: conftest.py  helpers.py  models.py  test_admin_api.py  test_compensation_flow.py  test_context_persistence.py  test_core_flow.py  test_inbox_flow.py  test_lifecycle_hooks.py  test_notification_flow.py  test_orchestrator_flow.py  test_outbox_flow.py  test_repository.py
tests/unit/: test_builder.py  test_inbox_extensibility.py  test_input_context.py  test_orchestrator_helpers.py  test_outbox_extensibility.py  test_retry.py  test_step_type_resolution.py
(+2 files in other folders)
