[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-saga-orchestrator"
version = "0.1.3"
description = "Lightweight embedded saga orchestrator for asyncio Python services"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Maxim Vasilyev", email = "mayxis@inbox.ru" },
]
keywords = [
    "saga",
    "orchestration",
    "asyncio",
    "sqlalchemy",
    "distributed-transactions",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "asyncpg>=0.31.0",
    "greenlet>=3.3.2",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
]

[project.urls]
Homepage = "https://github.com/mdvasilyev/python-saga-orchestrator"
Issues = "https://github.com/mdvasilyev/python-saga-orchestrator/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12.0",
    "twine>=6.1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["saga_orchestrator*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
